[gd_scene load_steps=19 format=3 uid="uid://dspldn353hqiq"]

[ext_resource type="Script" path="res://level1/level_1.gd" id="1_hh4fe"]
[ext_resource type="PackedScene" uid="uid://cpko1hrbwgkfu" path="res://player/player.tscn" id="1_ulg3c"]
[ext_resource type="PackedScene" uid="uid://bgsvejlihua58" path="res://enemy_type1/enemy_type1.tscn" id="2_ig40w"]
[ext_resource type="PackedScene" uid="uid://b55qe2p1glsrc" path="res://level1/bullet_pool.tscn" id="3_wfuy1"]
[ext_resource type="Texture2D" uid="uid://cxlwcbrf4c6vs" path="res://level1/particles.png" id="5_3422w"]
[ext_resource type="Texture2D" uid="uid://du10sbddkcttf" path="res://level1/Fading_Sky-Sunset_02-1024x512.png" id="6_s7myq"]
[ext_resource type="PackedScene" uid="uid://0bdfcun5wmab" path="res://enemy_type2/EnemyType2.tscn" id="7_fayyj"]
[ext_resource type="Shader" path="res://boss/boss_power.gdshader" id="9_tl4ca"]
[ext_resource type="Texture2D" uid="uid://ddlbexsyyhs33" path="res://boss/Abstract_Noise_037-512x512.png" id="9_vywa6"]
[ext_resource type="PackedScene" uid="uid://bqqim40xnth12" path="res://boss/boss.tscn" id="11_neqbv"]
[ext_resource type="AudioStream" uid="uid://c8yunmcclk4hq" path="res://level1/level1_theme.wav" id="12_nagfv"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_mism2"]
panorama = ExtResource("6_s7myq")

[sub_resource type="Sky" id="Sky_347u3"]
sky_material = SubResource("PanoramaSkyMaterial_mism2")

[sub_resource type="Environment" id="Environment_p6jhb"]
background_mode = 2
sky = SubResource("Sky_347u3")
glow_enabled = true
glow_normalized = true
volumetric_fog_enabled = true
volumetric_fog_albedo = Color(0.0430392, 0.0430392, 0.0430392, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nhajv"]
transparency = 1
albedo_texture = ExtResource("5_3422w")

[sub_resource type="PlaneMesh" id="PlaneMesh_73euj"]
material = SubResource("StandardMaterial3D_nhajv")
size = Vector2(0.2, 0.2)

[sub_resource type="Gradient" id="Gradient_rssod"]
colors = PackedColorArray(0, 0.584314, 0.521569, 1, 1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_duxfd"]
shader = ExtResource("9_tl4ca")
shader_parameter/wobble_speed = 1.0
shader_parameter/wobble_intensity = 0.1
shader_parameter/grow_speed = 0.5
shader_parameter/panning_speed = 0.2
shader_parameter/transparency = 0.14
shader_parameter/texture = ExtResource("9_vywa6")

[node name="Level1" type="Node2D"]
script = ExtResource("1_hh4fe")
Enemy = ExtResource("2_ig40w")
EnemyPhase2 = ExtResource("7_fayyj")
BulletPhase2 = ExtResource("7_fayyj")
boss = ExtResource("11_neqbv")
player_scene = ExtResource("1_ulg3c")

[node name="Background" type="Camera3D" parent="."]
environment = SubResource("Environment_p6jhb")

[node name="CPUParticles3D" type="CPUParticles3D" parent="Background"]
transform = Transform3D(1, 0, 0, 0, 0.49297, -0.870046, 0, 0.870046, 0.49297, 2.58683, 0, -2.16)
amount = 20
lifetime = 3.0
randomness = 1.0
fixed_fps = 60
mesh = SubResource("PlaneMesh_73euj")
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
direction = Vector3(0, 0, 0)
spread = 73.3
gravity = Vector3(-1, 0, 0)
angular_velocity_min = 405.35
angular_velocity_max = 720.0
linear_accel_min = 3.75
linear_accel_max = 13.75
scale_amount_min = 0.1
scale_amount_max = 0.5
color = Color(0, 0.734117, 0.734117, 1)
color_ramp = SubResource("Gradient_rssod")
hue_variation_min = 1.0
hue_variation_max = 1.0

[node name="BossFx" type="Sprite2D" parent="."]
visible = false
z_index = -11
material = SubResource("ShaderMaterial_duxfd")
position = Vector2(629, 340)
scale = Vector2(3.08008, 1.81641)
texture = ExtResource("9_vywa6")

[node name="BossFx2" type="Sprite2D" parent="."]
visible = false
z_index = -11
material = SubResource("ShaderMaterial_duxfd")
position = Vector2(605, 416)
rotation = 0.627051
scale = Vector2(3.08008, 2.928)
texture = ExtResource("9_vywa6")

[node name="BulletPool" parent="." instance=ExtResource("3_wfuy1")]
position = Vector2(-39, -30)

[node name="PlayerSpawn" type="Node2D" parent="."]
position = Vector2(184, 353)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Phase1Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Phase2Timer" type="Timer" parent="."]
wait_time = 40.0
one_shot = true
autostart = true

[node name="CoolDownTImer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="BackgroundMsc" type="AudioStreamPlayer2D" parent="."]
position = Vector2(655, 359)
scale = Vector2(3.08008, 1.81641)
stream = ExtResource("12_nagfv")
autoplay = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_respawn_timer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="Phase1Timer" to="." method="_on_phase_1_timer_timeout"]
[connection signal="timeout" from="Phase1Timer" to="." method="_on_phase1_timeout"]
[connection signal="timeout" from="Phase2Timer" to="." method="_on_phase_2_timer_timeout"]
[connection signal="timeout" from="CoolDownTImer" to="." method="_on_cool_down_timer_timeout"]
